# project-agora

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  a2as.yaml  cleanup.sh  pyproject.toml  setup_environment.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
adk-copilot/: agent.py
adk-copilot/entities/: ticket.py
adk-copilot/sub_agents/: README.md
adk-copilot/tools/: __init__.py
adk_copilot/: __init__.py  agent.py  callbacks.py  logging_config.py  prompts.py  requirements.txt
adk_copilot/entities/: ticket.py
adk_copilot/sub_agents/: README.md
adk_copilot/tools/: README.md  __init__.py  _data_tools.py  _rendering_tools.py  _state_tools.py  exceptions.py  file_reader_tool.py  tools.py
agent-console/: package-lock.json  package.json
agent-console/app/: globals.css  page.tsx
agent-console/components/: ArchitectureApprovalCard.tsx  ChatMessage.tsx  ChatWindow.tsx  ErrorBoundary.tsx  Footer.tsx  Header.tsx  JsonModal.tsx  LogEntry.tsx  MessageInput.tsx  OrchestratorLog.tsx  Tooltip.tsx
agent-console/hooks/: useChatStore.tsx  useChatStream.tsx  useLogStore.tsx
data/: README.md  resolved_tickets.csv
data/knowledge_base/: adk-docs.md  adk-docs_agents.md  adk-docs_agents_custom-agents.md  adk-docs_agents_llm-agents.md  adk-docs_agents_models.md  adk-docs_agents_multi-agents.md  adk-docs_agents_workflow-agents.md  adk-docs_agents_workflow-agents_loop-agents.md  adk-docs_agents_workflow-agents_parallel-agents.md  adk-docs_agents_workflow-agents_sequential-agents.md  adk-docs_api-reference.md  adk-docs_artifacts.md  adk-docs_callbacks.md  adk-docs_callbacks_design-patterns-and-best-practices.md  adk-docs_callbacks_types-of-callbacks.md  adk-docs_community.md  adk-docs_context.md  adk-docs_contributing-guide.md  adk-docs_deploy.md  adk-docs_deploy_agent-engine.md  adk-docs_deploy_cloud-run.md  adk-docs_deploy_gke.md  adk-docs_evaluate.md  adk-docs_events.md  adk-docs_get-started.md  adk-docs_get-started_about.md  adk-docs_get-started_installation.md  adk-docs_get-started_quickstart.md  adk-docs_get-started_streaming.md  adk-docs_get-started_streaming_quickstart-streaming-java.md  adk-docs_get-started_streaming_quickstart-streaming.md  (+38 more)
deployment/: README.md  deploy.py  deploy_agent_engine.py  deploy_cloud_run.sh
eval/: README.md  test_eval.py
intelligent_support_triage/: .env.example  agent.py  evalsetf6f7b3.evalset.json  prompts.py  utils.py
project_agora/: __init__.py  agent.py  callbacks.py  logging_config.py  prompts.py
scripts/: README.md  convert_to_pdf.py  create_mock_db.py  scrape_adk_docs.py  setup_bigquery.py  setup_rag.py
(+49 files in other folders)
